app/kustomize/overlays/prod/ingress/ingress.yaml
#apiVersion: networking.k8s.io/v1beta1
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: github-ingress
  labels:
    app.kubernetes.io/part-of: k8s-hands-on
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/issuer: "prod-letsencrypt"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  # 自己署名の証明書のキーペアを含むSecretリソースを指定する
  tls:
  - hosts:
    - cloud.github.frieza.dev
    secretName: prod-letsencrypt
  rules:
  # 公開ホスト名
  - host: cloud.github.frieza.dev
    http:
      # パスベースルーティング
      paths:
      # API Gateway
      - path: /api/v1
        backend:
          serviceName: api-gateway
          servicePort: 80
      # Vue.js
      - path: /
        backend:
          serviceName: repo-search-ui
          servicePort: 80
